# holo-hosting-app-redux

./: .gitignore  .hcignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  app.json  config.nix  default.nix  manifest.json  package.json  pkgs.nix  shell.nix
.circleci/: config.yml
dna-src/: .hcignore  Cargo.toml  Makefile  app.json  config.nix  default.nix
dna-src/hc_common/utils/: Cargo.toml
dna-src/hc_common/utils/src/: lib.rs
dna-src/install/: default.nix
dna-src/test/: index.js  package.json
dna-src/test/e2e/: default.nix
dna-src/test/unit_test/: app_flow_test.js  categories_test.js  dna_dns_test.js  host_test.js  kv_enable_disable_test.js  payment_prefs_test.js  provider_test.js  register_app_test.js  retrive_all_apps.js  whoami_test.js
dna-src/zomes/host/code/: .build  .hcbuild  Cargo.toml
dna-src/zomes/host/code/src/: host_fn.rs  lib.rs
dna-src/zomes/host/code/src/entry/: host_doc.rs  mod.rs  payment_pref.rs
dna-src/zomes/provider/code/: .build  Cargo.toml
dna-src/zomes/provider/code/src/: lib.rs  provider_fn.rs
dna-src/zomes/provider/code/src/entry/: anchor.rs  app_config.rs  app_details.rs  domain_name.rs  holofuel_account.rs  mod.rs  payment_pref.rs  provider_doc.rs
dna-src/zomes/whoami/code/: .build  .hcbuild  Cargo.toml
dna-src/zomes/whoami/code/src/: lib.rs  whoami_fn.rs
hc_common/utils/: Cargo.toml
hc_common/utils/src/: lib.rs
install/: default.nix
test/: README.md  config.js  default.nix  index.js  package-lock.json  package.json  webpack.config.js
test/e2e/: default.nix
test/unit/: default.nix
test/unit_test/: app_flow_test.js  categories_test.js  dna_dns_test.js  host_test.js  kv_enable_disable_test.js  payment_prefs_test.js  provider_test.js  register_app_test.js  retrive_all_apps.js  whoami_test.js
zomes/categories/: zome.json
zomes/categories/code/: .build  Cargo.toml
zomes/categories/code/src/: categories_fn.rs  lib.rs
zomes/host/: zome.json
zomes/host/code/: .build  .hcbuild  Cargo.toml
zomes/host/code/src/: host_fn.rs  lib.rs
zomes/host/code/src/entry/: host_doc.rs  mod.rs  payment_pref.rs
zomes/provider/: zome.json
zomes/provider/code/: .hcbuild  Cargo.toml
zomes/provider/code/src/: app_config.rs  lib.rs  provider_fn.rs
zomes/provider/code/src/entry/: anchor.rs  app_config.rs  app_details.rs  domain_name.rs  holofuel_account.rs  mod.rs  provider_doc.rs
zomes/whoami/: zome.json
zomes/whoami/code/: .hcbuild  Cargo.toml
zomes/whoami/code/src/: lib.rs  whoami_fn.rs
