[package]
name = "utils"
version = "0.1.0"
authors = ["Willem Olding <willem.olding@holo.host>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { path = "../../../holochain-rust/hdk-rust" }
holochain_core_types_derive = { path = "../../../holochain-rust/core_types_derive" }
