[package]
name = "hc_common"
version = "0.1.1"
authors = ["Willem Olding <willem.olding@holo.host>","Zo-El <joel.ulahanna@holo.host>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { path = "../../holochain-rust/hdk-rust" }
holochain_json_derive = "=0.0.17"
