[package]
name = "hc_common"
version = "0.1.1"
authors = ["Willem Olding <willem.olding@holo.host>","Zo-El <joel.ulahanna@holo.host>"]
edition = "2018"

[dependencies]
serde = "=1.0.104"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.104"
hdk = { path = "../../holochain-rust/crates/hdk" }
holochain_json_derive = "=0.0.23"
