[package]
name = "utils"
version = "0.1.0"
authors = ["Willem Olding <willem.olding@holo.host>","Zo-El <joel.ulahanna@holo.host>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.14-alpha1" }
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.14-alpha1" }
