[package]
name = "host"
version = "0.6.0"
authors = ["zo-el <joelulahanna@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.104"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.104"
syn = "=0.15.31"
hdk = { path = "../../../holochain-rust/crates/hdk" }
holochain_json_derive = "=0.0.23"
boolinator = "=2.4.0"
hc_common = { path = "../../../hc_common/utils" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
