[package]
name = "provider"
version = "0.1.0"
authors = ["zo-el <zo@el.org>"]
edition = "2019"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { path = "../../../../holochain-rust/hdk-rust" }
holochain_core_types_derive = { path = "../../../../holochain-rust/core_types_derive" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
