[package]
name = "host"
version = "0.1.0"
authors = ["zo-el <joelulahanna@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "develop"}
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , branch = "develop"}
utils = { path = "../../../hc_common/utils" }
boolinator = "=2.4.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
