[package]
name = "host"
version = "0.2.0-alpha"
authors = ["zo-el <joelulahanna@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.17-alpha2"}
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.17-alpha2"}
boolinator = "=2.4.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
