[package]
name = "provider"
version = "0.2.1-alpha"
authors = ["zo-el <zo@el.org>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.17-alpha2"}
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.17-alpha2"}
boolinator = "=2.4.0"
hc_common = { path = "../../../hc_common/utils" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
