[package]
name = "provider"
version = "0.2.2-alpha"
authors = ["zo-el <zo@el.org>"]
edition = "2018"

[dependencies]
serde = { version = "=1.0.89", features = ["rc"] }
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
syn = "=0.15.31"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.18-alpha1"}
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.18-alpha1"}
boolinator = "=2.4.0"
hc_common = { path = "../../../hc_common/utils" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
