[package]
name = "provider"
version = "0.2.2-alpha"
authors = ["zo-el <zo@el.org>"]
edition = "2018"

[dependencies]
serde = { version = "=1.0.89", features = ["rc"] }
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
syn = "=0.15.31"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.23-alpha1"}
holochain_json_derive = "=0.0.1-alpha2"
boolinator = "=2.4.0"
hc_common = { path = "../../../hc_common/utils" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
