[package]
name = "whoami"
version = "0.2.1-alpha"
authors = ["zo-el <joelulahanna@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.17-alpha2"}
holochain_core_types_derive= { git = "https://github.com/holochain/holochain-rust" , branch = "release-0.0.17-alpha2"}


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
